# finora

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_HANDOFF.md  HANDOFF.md  README.md  docker-compose.production.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/apps/agents/: apps.py  llm.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/expenses/: approval_schemas.py  approval_services.py  models.py  urls.py  (+4 more)
backend/config/: celery.py  urls.py  views.py
backend/scripts/: dev-server.sh  start-production.sh
backend/tests/: apps.py  conftest.py  factories.py  models.py  test_agent_workflow_api.py  test_agent_workflow_model.py  test_agent_workflow_service.py  test_audit_log_api.py  test_audit_log_model.py  test_auth.py  test_celery.py  test_context.py  test_demo_data_service.py  test_demo_recovery_task.py  test_deployment_artifacts.py  test_expense_api.py  test_expense_approval_api.py  test_expense_approval_models.py  test_expense_approval_policy_service.py  test_expense_approval_schema.py  test_expense_approval_workflow_service.py  test_expense_approver_service.py  test_expense_approver_task.py  test_expense_service.py  test_expenses_models.py  test_gemini_provider.py  test_health.py  test_invoice_api.py  test_invoice_chaser_scheduler.py  test_invoice_chaser_service.py  test_invoice_chaser_task.py  test_invoice_reminder_draft_schema.py  test_invoice_service.py  test_invoices_models.py  test_llm_provider.py  test_llm_to_extraction_pipeline.py  test_middleware.py  test_receipt_extraction_schema.py  test_receipt_processor_service.py  test_receipt_processor_task.py  (+5 more)
(+85 files in other folders)
