[project]
name = "finora-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2,<6.0",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "celery>=5.4",
    "redis>=5.0",
    "psycopg[binary]>=3.2",
    "django-environ>=0.11",
    "pydantic>=2.7",
    "google-genai>=1.0",
    "django-cors-headers>=4.4",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-django>=4.8",
    "factory-boy>=3.3",
]

# This project is a Django app run via manage.py, not a distributable package —
# pytest's pythonpath=["."] already makes apps/config importable. `pip install -e .`
# is only used to resolve [project.dependencies]; tell setuptools not to look for
# packages to avoid it guessing between apps/ and config/.
[tool.setuptools]
packages = []

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]
pythonpath = ["."]
testpaths = ["tests"]
